[gd_scene load_steps=8 format=3 uid="uid://c8bdtq0hjldne"]

[ext_resource type="Script" path="res://scripts/interactables/vehicles/VehicleThreeCharacterBody.gd" id="1_wembm"]
[ext_resource type="Texture2D" uid="uid://bxmkpqgvpq83i" path="res://assets/art/objects/vehicles/truckcabin.png" id="2_1hv3a"]
[ext_resource type="Script" path="res://scripts/interactables/vehicles/VehicleThreeRigidBody.gd" id="3_tm2y4"]
[ext_resource type="Script" path="res://scripts/interactables/objects/components/RigidStaticObjectArea2D.gd" id="4_47s4t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4y8hs"]
size = Vector2(80.0001, 156)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wsvgj"]
size = Vector2(80, 156)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sf568"]
size = Vector2(168, 90)

[node name="CharacterBody2D" type="CharacterBody2D"]
light_mask = 2
visibility_layer = 2
z_index = 2
z_as_relative = false
collision_layer = 2
script = ExtResource("1_wembm")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("2_1hv3a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5.78244e-05, 7.99995)
rotation = -1.57079
shape = SubResource("RectangleShape2D_4y8hs")

[node name="RigidBody2D" type="RigidBody2D" parent="."]
light_mask = 16
visibility_layer = 16
z_index = 5
z_as_relative = false
collision_layer = 16
collision_mask = 17
mass = 0.4
script = ExtResource("3_tm2y4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2(-5.95567e-05, 7.99995)
rotation = -1.57079
shape = SubResource("RectangleShape2D_wsvgj")

[node name="Area2D" type="Area2D" parent="RigidBody2D"]
collision_layer = 16
collision_mask = 16
script = ExtResource("4_47s4t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/Area2D"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_sf568")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="RigidBody2D" to="RigidBody2D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="RigidBody2D" to="RigidBody2D" method="_on_mouse_exited"]
[connection signal="body_entered" from="RigidBody2D/Area2D" to="RigidBody2D" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="RigidBody2D/Area2D" to="RigidBody2D" method="_on_area_2d_body_exited"]
